# VLM2Vec

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
configs/: mmeb_a100_full.yaml  mmeb_quick_smoke.yaml
evaluation/: __init__.py  multi_vector_eval.py
notebooks/: run_mmeb_eval.ipynb
src/data/dataset/: mmeb_dataset.py
src/retriever/: __init__.py  base.py  colnomic.py  colqwen2.py  compression.py  memory.py  nemoretriever.py  scoring.py
src/vlm2vec_benchmark.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_cache.py  test_colnomic.py  test_colqwen2.py  test_nemoretriever.py  test_pipeline.py  test_scoring.py
